# aloha_RM

./: README.md  pyproject.toml
configs/: pipeline.yaml
scripts/: collect_data.py  run_policy.py  train_policy.py
src/aloha_rm/: __init__.py  config.py
src/aloha_rm/camera/: __init__.py  base.py  mock_camera.py  opencv_camera.py  realsense_camera.py
src/aloha_rm/follower/: realman_client.py
src/aloha_rm/inference/: policy_runner.py
src/aloha_rm/leader/: servo_leader.py
src/aloha_rm/teleop/: collector.py
src/aloha_rm/training/: dataset.py  model.py  train.py
tests/: test_collector_camera.py  test_config_camera.py  test_training_pipeline.py
